--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -64,6 +64,8 @@
 \newcommand{\domain}{\mathsf{dom}}
 \newcommand{\instance}{\mathsf{ins}}
 \newcommand{\ground}{\mathfrak{G}}
+\newcommand{\fttt}[1]{{\texttt{\footnotesize #1}}}
+\newcommand{\prove}{{\texttt{\footnotesize prove}}}
 
 \parindent 3ex % Agrega sangrías de 3 espacios (3 veces el espacio de la x)
 \setlength{\baselineskip}{1.5pt} % Interlineado 1.5
@@ -94,10 +96,10 @@
 \newcommand{\SOForall}{\texttt{so-forall}}
 \newcommand{\Exists}{\texttt{exists}}
 \newcommand{\Forall}{\texttt{forall}}
-\newcommand{\fun}{\texttt{Fun}}
-\newcommand{\pfun}{\texttt{PFun}}
-\newcommand{\inj}{\texttt{Inj}}
-\newcommand{\pinj}{\texttt{PInj}}
+\newcommand{\Inj}{\text{Inj}}
+\newcommand{\Fun}{\text{Fun}}
+\newcommand{\PFun}{\text{PFun}}
+\newcommand{\PInj}{\text{PFun}}
 
 % tokens
 \newcommand{\var}{\texttt{<VAR>}}
@@ -117,7 +119,7 @@
 \newcommand{\est}[4]{\textbf{establish}[#1](#2)=(\{#3\},\{#4\})}
 \newcommand{\settrue}[3]{\textbf{set-true}[#1](#2)=(\emptyset,\{#3\})}
 \newcommand{\setfalse}[3]{\textbf{set-false}[#1](#2)=(\emptyset,\{#3\})}
-\newcommand{\suc}{\text{SUC}}
+\newcommand{\SUC}{\text{SUC}}
 \newcommand{\len}{\ell}
 
 %\newcommand{\action}[1]{action[#1]}
@@ -125,6 +127,7 @@
 \newcommand{\eff}{\text{eff}}
 \newcommand{\true}{\textbf{true}}
 \newcommand{\false}{\textbf{false}}
+\newcommand{\SAT}{\textsc{Sat}}
 
 \renewcommand{\O}{\ensuremath{\mathcal{O}}}
 
